--- a/userspace/sysdig/man/sysdig.8
+++ b/userspace/sysdig/man/sysdig.8
@@ -23,7 +23,7 @@ events.
 sysdig can be both used to inspect live systems, or to generate trace
 files that can be analyzed at a later stage.
 .PP
-sysdig includes a powerul filtering language, has customizable output,
+sysdig includes a powerful filtering language, has customizable output,
 and can be extended through Lua scripts, called chisels.
 .PP
 \f[B]Output format\f[]
